--- a/recipes/chicken-adobo.html
+++ b/recipes/chicken-adobo.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Odin Project: Recipes</title>
+    <title>Chicken Adobo</title>
 </head>
 <body>
-    <h1>Odin Project: Recipes</h1>
-    <a src="./recipes/chicken-adobo.html">Chicken Adobo</a>
+    <h1>Chicken Adobo</h1>
 </body>
 </html>
