--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Project: Recipes</h1>
-    <a href="./recipes/chicken-adobo.html">Chicken Adobo</a>
+    <a href="./recipes/fried-rice.html">Fried rice</a>
 </body>
 </html>
