Add main-page image and link to return to main-page

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -98,5 +98,6 @@
             <strong>Serve!</strong> Then dish it up and serve nice and warm!
         </li>
     </ol>
+    <a href="../index.html">Return to Main Page</a>
 </body>
 </html>
