--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Project: Recipes</h1>
+    <img 
+        src="https://www.uaex.uada.edu/life-skills-wellness/food-nutrition/eating-well/EFNEP/images/Recipes-Banner.jpg" 
+        alt="An sortment of food ingredients with a book labelled recipes" 
+        style="display: block;"
+    />
     <a href="./recipes/fried-rice.html">Fried rice</a>
 </body>
 </html>
