--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         alt="An sortment of food ingredients with a book labelled recipes" 
         style="display: block;"
     />
-    <a href="./recipes/fried-rice.html">Fried rice</a>
+    <h3>Recipes:</h3>
+    <ul>
+        <li><a href="./recipes/fried-rice.html">Fried rice</a></li>
+    </ul> 
 </body>
 </html>
