--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h3>Recipes:</h3>
     <ul>
         <li><a href="./recipes/fried-rice.html">Fried rice</a></li>
+        <li><a href="">Pizza Melts</a></li>
+        <li><a href="">Grilled Cheese Sandwich</a></li>
     </ul> 
 </body>
 </html>
