Fix unneeded </p> in description

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -16,7 +16,7 @@
         I ordered the same thing — egg drop soup and fried rice, my absolute favorites. 
         This restaurant set the bar high for me early when it comes to how amazing fried rice could be. 
         Theirs was always perfectly al dente with slightly crispy edges, full of rich savory flavors, 
-        and loaded up with plenty of extra veggies, eggs, and whatever protein sounded good.</p>
+        and loaded up with plenty of extra veggies, eggs, and whatever protein sounded good.
     </p>
     <p>
         After our favorite restaurant sadly closed over a decade ago, I spent years tinkering around with 
