--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <title>My Odin Project: Recipes</title>
 </head>
 <body>
-    <h1>Odin Project: Recipes</h1>
+    <h1 style="text-align: center;">Odin Project: Recipes</h1>
     <img 
         src="https://www.uaex.uada.edu/life-skills-wellness/food-nutrition/eating-well/EFNEP/images/Recipes-Banner.jpg" 
         alt="An sortment of food ingredients with a book labelled recipes" 
-        style="display: block;"
+        style="display: block; margin: 0 auto;"
     />
-    <h3>Recipes:</h3>
-    <ul>
-        <li><a href="./recipes/fried-rice.html">Fried rice</a></li>
-        <li><a href="./recipes/pizza-melts.html">Pizza Melts</a></li>
-        <li><a href="./recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
-    </ul> 
+    <div style="text-align: center;">
+        <h3>Recipes:</h3>
+        <ul style="display: inline-block; text-align: left;">
+            <li><a href="./recipes/fried-rice.html">Fried rice</a></li>
+            <li><a href="./recipes/pizza-melts.html">Pizza Melts</a></li>
+            <li><a href="./recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
+        </ul> 
+    </div>
 </body>
 </html>
