Style all recipe pages using styles.css

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Grilled Cheese Sandwich</title>
 </head>
 <body>
@@ -45,6 +46,6 @@
             Flip sandwich and cook until cheese is crispy and caramelized on the other side, <strong>3 to 4 minutes more.</strong>
         </li>
     </ol>
-    <a href="../index.html">Return to Main Page</a>
+    <a class="return-home" href="../index.html">Return to Main Page</a>
 </body>
 </html>
