--- a/recipes/pizza-melts.html
+++ b/recipes/pizza-melts.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Pizza Melts</title>
 </head>
 <body>
@@ -58,6 +59,6 @@
             <strong>Cut the sandwich in half and serve!</strong>
         </li>
     </ol>
-    <a href="../index.html">Return to Main Page</a>
+    <a class="return-home" href="../index.html">Return to Main Page</a>
 </body>
 </html>
