--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>Fried Rice</title>
 </head>
 <body>
@@ -98,6 +99,6 @@
             <strong>Serve!</strong> Then dish it up and serve nice and warm!
         </li>
     </ol>
-    <a href="../index.html">Return to Main Page</a>
+    <a class="return-home" href="../index.html">Return to Main Page</a>
 </body>
 </html>
